// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - default - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "default",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": "",
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.decimalSeparator: ',' - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.decimalSeparator: ',' - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": ",",
      "groupSeparator": undefined,
      "id": "properties.decimalSeparator: ','",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": 3.45,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.groupSeparator: ',' - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.groupSeparator: ',' - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": ",",
      "groupSeparator": ".",
      "id": "properties.groupSeparator: ','",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": 3565542.45,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.loading: true - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.loading: true - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.loading: true",
      "loading": true,
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": <HtmlComponent
        html="Statistic title"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "value": 3.45,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.precision: 2 - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.precision: 2 - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.precision: 2",
      "loading": undefined,
      "precision": 2,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": 3.456,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefix: R - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.prefix: R - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.prefix: R",
      "loading": undefined,
      "precision": undefined,
      "prefix": "R",
      "suffix": "",
      "title": undefined,
      "value": 3.45,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefixIcon: AiFillAccountBook - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.prefixIcon: AiFillAccountBook - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.prefixIcon: AiFillAccountBook",
      "loading": undefined,
      "precision": undefined,
      "prefix": <AntIcon
        basePath=""
        blockId="properties.prefixIcon: AiFillAccountBook_prefixIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AiFillAccountBook"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "suffix": "",
      "title": undefined,
      "value": 3.45,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffix: Rand - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.suffix: Rand - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.suffix: Rand",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": "Rand",
      "title": undefined,
      "value": 3.45,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffixIcon: AiFillAccountBook - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.suffixIcon: AiFillAccountBook - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.suffixIcon: AiFillAccountBook",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": <AntIcon
        basePath=""
        blockId="properties.suffixIcon: AiFillAccountBook_suffixIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AiFillAccountBook"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "title": undefined,
      "value": 3.45,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.title - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.title",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": <HtmlComponent
        html="Statistic title"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "value": "",
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title with html - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.title with html - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.title with html",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": "%",
      "title": <HtmlComponent
        html=<div style="color:blue;">
  Very Html
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
                Array [
                  undefined,
                  true,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":true}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "value": 100,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.value: '3.45' as string - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.value: '3.45' as string - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.value: '3.45' as string",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": "3.45",
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.value: 3.45 as number - value[0] - Statistic 1`] = `mocked`;

exports[`Mock render - properties.value: 3.45 as number - value[0] - Statistic 2`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.value: 3.45 as number",
      "loading": undefined,
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": 3.45,
      "valueStyle": "{\\"options\\":true}",
    },
    Object {},
  ],
]
`;
